# Build system configuration
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# Project metadata and dependencies
[project]
name = "python-game-suite"
version = "1.0.0"
description = "A collection of classic games implemented in Python."
requires-python = ">=3.9"
authors = [
    { name = "Onehand Coding", email = "Onehand.coding433@gmail.com" },
]

dependencies = [
    "pygame>=2.5.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "ruff>=0.6",        # Linting and formatting
]

# CLI entry point
[project.scripts]
run-games = "python_game_suite.main:main"

# Code formatting and linting
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
